--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 	<meta charset="utf-8">
 	<title></title>
 	<!-- Webix Library -->
-	<script type="text/javascript" src="//cdn.webix.com/edge/webix.js"></script>
-	<link rel="stylesheet" type="text/css" href="//cdn.webix.com/edge/webix.css">
+<!--	<script type="text/javascript" src="//cdn.webix.com/edge/webix.js"></script>-->
+	<script type="text/javascript" src="sources/assets/webix.js"></script>
+<!--	<link rel="stylesheet" type="text/css" href="//cdn.webix.com/edge/webix.css">-->
+	<link rel="stylesheet" type="text/css" href="sources/assets/skins/flat.css">
 
 	<!-- App -->
 	<script type="text/javascript" src="codebase/myapp.js"></script>
