# Before attached documents.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="sources/assets/webix.js"></script>
 <!--	<link rel="stylesheet" type="text/css" href="//cdn.webix.com/edge/webix.css">-->
 	<link rel="stylesheet" type="text/css" href="sources/assets/skins/flat.css">
+<!--	<link rel="stylesheet" type="text/css" href="sources/assets/skins/compact.css">-->
 
 	<!-- App -->
 	<script type="text/javascript" src="codebase/myapp.js"></script>
